--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,5 @@
 AISSTREAM_APIKEY=yourkey
 AISSTREAM_URL=wss://stream.aisstream.io/v0/stream
 MONGODB_URL=mongodb://localhost:27017/aisstream
+
+RUST_LOG=info
